Fix filters z-index issue

--- a/assets/dev/sass/component/_footer.scss
+++ b/assets/dev/sass/component/_footer.scss
@@ -81,6 +81,7 @@
 }
 
 .c-footer__filter.is-active {
+  z-index: 9999;
 
   .c-footer__filters {
     opacity: 1;
